# shig

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  RELEASES.md  SECURITY.md
.github/workflows/: build-and-release.yml  deploy.yml
config/: default.toml  default.yml
config/certs/: cert.pem  key.pem
doc/: config.md  development.md  index.md  moq.md  performance.md
doc/admin/: database.md  deployment.md  install.md
doc/architecture/sfu/: control_events.md
doc/resources/: peer.puml
migrations/2024-12-20-152157_create_actors/: up.sql
migrations/2024-12-20-152158_create_user_roles/: up.sql
migrations/2024-12-20-153042_create_instances/: up.sql
migrations/2024-12-20-173748_create_users/: up.sql
migrations/2024-12-28-175302_create_channels/: up.sql
migrations/2025-01-05-171958_creat_verification_tokens/: down.sql  up.sql
migrations/2025-03-03-185403_create_actor_images/: down.sql  up.sql
migrations/2025-03-23-170147_create_active_users_view/: up.sql
migrations/2025-03-23-170147_create_session_principals_view/: up.sql
migrations/2025-05-08-144241_create_streams/: down.sql  up.sql
migrations/2025-05-08-144242_create_stream_thumbnails/: down.sql  up.sql
migrations/2025-05-08-144714_create_stream_previews_view/: up.sql
migrations/2025-07-20-185526_create_lobbies/: down.sql  up.sql
migrations/2025-08-20-184123_create_friend_roles/: down.sql  up.sql
migrations/2025-08-20-184124_create_channel_friends/: down.sql  up.sql
migrations/2025-08-20-184207_create_stream_friends/: down.sql  up.sql
src/: api.rs  db.rs  federation.rs  files.rs  main.rs  middleware.rs  models.rs  relay.rs  server.rs  sfu.rs  util.rs  worker.rs
src/api/: auth.rs  relay.rs  user.rs  users.rs
src/api/auth/: login.rs  pass.rs  refresh.rs  signup.rs  user.rs  verify.rs
src/api/federation/: settings.rs
src/api/relay/: announcement.rs  auth.rs  media.rs  tls.rs
src/api/user/: channel.rs  lobby.rs  stream.rs  stream_friend.rs  stream_preview.rs  whep.rs  whip.rs
src/db/: active_users.rs  actor_images.rs  actors.rs  channel_friends.rs  channels.rs  error.rs  fixtures.rs  friend_roles.rs  instances.rs  lobbies.rs  schema.rs  schema_views.rs  sessions.rs  stream_friends.rs  stream_meta_data.rs  stream_participants.rs  stream_previews.rs  stream_thumbnails.rs  streams.rs  user_roles.rs  users.rs  verification_tokens.rs
src/db/active_users/: read.rs
src/db/actor_images/: create.rs  delete.rs  read.rs  update.rs
src/db/actors/: create.rs  delete.rs  read.rs
src/db/channel_friends/: create.rs  delete.rs  read.rs  update.rs
src/db/channels/: create.rs  delete.rs  read.rs  update.rs
src/db/instances/: create.rs  read.rs
src/db/lobbies/: create.rs  read.rs  update.rs
src/db/sessions/: read.rs
src/db/stream_friends/: create.rs  delete.rs  read.rs  update.rs
src/db/stream_meta_data/: create.rs  update.rs
src/db/stream_participants/: create.rs  delete.rs  read.rs
src/db/stream_previews/: read.rs
src/db/stream_thumbnails/: create.rs  delete.rs  read.rs  update.rs
src/db/streams/: create.rs  delete.rs  read.rs  update.rs
src/db/users/: create.rs  delete.rs  read.rs  update.rs
src/db/verification_tokens/: create.rs  delete.rs  read.rs  update.rs
src/federation/: error.rs
src/files/: error.rs  uploader.rs
src/middleware/: auth.rs  req.rs
src/models/: auth.rs  error.rs  http.rs  lobby.rs  mail.rs  user.rs
src/models/auth/: jwt.rs  login.rs  pass.rs  refresh.rs  session.rs  signup.rs  verify.rs
src/models/federation/: settings.rs
src/models/http/: payload.rs  response.rs
src/models/lobby/: join.rs  macros.rs  streaming.rs
src/models/lobby/webrtc/: egress.rs  ingress.rs  publish.rs  subscribe.rs
src/models/mail/: activate_account.rs  config.rs  forgotten_password.rs  template.rs
src/models/mail/template/: activate_account.hbs  activate_account.rs  forgotten_password.hbs  forgotten_password.rs
src/models/user/: channel.rs  friend_role.rs  lobby.rs  stream.rs  stream_form.rs  stream_friend.rs  stream_meta_data.rs  stream_participant.rs  stream_preview.rs  stream_thumbnail.rs
src/relay/: config.rs  mp4.rs  publisher.rs  state.rs  stats.rs  track_state.rs
src/relay/mp4/: parser.rs
src/server/: error.rs
src/sfu/: config.rs  db.rs  error.rs  lobby.rs  media.rs  message.rs  peer.rs  relay.rs  router.rs
src/sfu/db/: message.rs
src/sfu/media/: connector.rs  control_channel.rs  control_data_channel.rs  data_channel.rs  data_channel_test.rs  error.rs  message.rs  receiver.rs  router.rs  router_test.rs  sdp.rs  sender.rs  signaler.rs  track_info.rs
src/sfu/relay/: actor.rs  actor_supervisor.rs  cmaf.rs  error.rs  message.rs  port_allocator.rs  publisher.rs  rtp_forwarder.rs
src/sfu/relay/cmaf/: box_payload.rs  cmaf_splitter.rs  cmaf_track_writer.rs  prepared_cmaf_track.rs  publisher.rs
src/util/: domain.rs  id.rs  iri.rs  rsa.rs  stop_guard.rs  time.rs
src/worker/: error.rs  filo.rs  manager.rs  message.rs  process.rs  state.rs
