[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Shig enables distributed live streams via the Ferdivers"
license = "AGPL-3.0"
homepage = "https://shig.de/"
documentation = "https://github.com/shide/shig/doc/undex.md"
repository = "https://github.com/shide/shig"

[package]
name = "shig_server"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
publish = false

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
tokio = { version = "1.41.1", features = ["full"] }
clap = { version = "4.5.21", features = ["derive"] }
toml = "0.5.2"
serde = "1.0.136"
serde_derive = "1.0.136"
diesel = { version = "2.2.6", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35", "chrono", "uuid"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.39"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
openssl = { version = "0.10", features = ["vendored"] }
bcrypt = "0.16.0"
rsa = "0.9.7"
rand = "0.8.5"
url = "2.5.4"


