[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Shig enables distributed live streams via the Ferdivers"
license = "AGPL-3.0"
homepage = "https://shig.de/"
documentation = "https://github.com/shide/shig/doc/undex.md"
repository = "https://github.com/shide/shig"

[package]
name = "shig_server"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
publish = false

[dependencies]
actix = "^0.13"
actix-multipart = "^0.7.2"
actix-web = { version = "^4", features = ["openssl"] }
actix-files = { version = "^0.6.6" }
actix-service = { version = "^2.0.2" }
jsonwebtoken = "^9.3.0"
lettre = { version = "0.11.11", features = ["tokio1", "tokio1-native-tls"] }
handlebars = "^6.3.0"
tokio = { version = "^1.4", features = ["full"] }
clap = { version = "^4.5.23", features = ["derive"] }
toml = "^0.5.2"
serde = { version = "^1.0.219", features = ["derive"] }
diesel = { version = "^2.2.7", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = "^2.2.0"
dotenv = "0.15.0"
log = "^0.4.22"
env_logger = "^0.11.6"
chrono = { version = "^0.4.39", features = ["serde"] }
uuid = { version = "^1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
openssl = { version = "^0.10", features = ["vendored"] }
bcrypt = "^0.16.0"
rsa = "^0.9.7"
rand = "^0.8.5"
futures = "^0.3.31"
derive_more = "^0.99.18"
serde_json = "^1.0.133"
mime = "^0.3.17"
sanitize-filename = "^0.6.0"


