[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Shig enables distributed live streams via the Ferdivers"
license = "AGPL-3.0"
homepage = "https://shig.de/"
documentation = "https://github.com/shide/shig/doc/index.md"
repository = "https://github.com/shide/shig"

[package]
name = "shig_server"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
publish = false

[dependencies]
actix = "^0.13"
actix-multipart = "^0.7.2"
actix-web = { version = "^4", features = ["openssl"] }
actix-files = { version = "^0.6.6" }
actix-rt = "2.11.0"
actix-service = { version = "^2.0.2" }
enclose = "1.2"
jsonwebtoken = "^9.3.0"
lettre = { version = "0.11.11", features = ["tokio1", "tokio1-native-tls"] }
handlebars = "^6.3.0"
tokio = { version = "^1.4", features = ["full"] }
tokio-util = "0.7"
clap = { version = "^4.5.23", features = ["derive"] }
toml = "^0.5.2"
serde = { version = "^1.0.219", features = ["derive"] }
diesel = { version = "^2.2.7", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = "^2.2.0"
log = "^0.4.22"
env_logger = "^0.11.6"
chrono = { version = "^0.4.39", features = ["serde"] }
uuid = { version = "^1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
openssl = { version = "^0.10", features = ["vendored"] }
bcrypt = "^0.16.0"
rsa = "^0.9.7"
rand = "^0.8.5"
futures = "^0.3.31"
derive_more = "^0.99.18"
serde_json = "^1.0.133"
mime = "^0.3.17"
sanitize-filename = "^0.6.0"
webrtc = "0.13"
anyhow = "1.0.99"
bytes = "1.9.0"
regex = "1.11.1"
futures-util = "0.3.31"

# MoQ transport + catalog
# Thin fork of moq-dev/moq with 4 additions:
# - MSF draft-00 catalog fields (targetLatency, generatedAt, namespace)
# - CMSF draft-00 SAP fields + event timeline
# - Session::stats() for QUIC transport stats
# Will switch to moq-dev/moq main when PRs are merged upstream.
#moq-lite = { git = "https://github.com/erikherz/moq", branch = "moqpush-lite03" }
#hang = { git = "https://github.com/erikherz/moq", branch = "moqpush-lite03" }
#moq-mux = { git = "https://github.com/erikherz/moq", branch = "moqpush-lite03" }
#moq-msf = { git = "https://github.com/erikherz/moq", branch = "moqpush-lite03" }
#moq-native = { git = "https://github.com/erikherz/moq", branch = "moqpush-lite03" }
#moq-relay = { git = "https://github.com/erikherz/moq", branch = "moqpush-lite03" }

moq-lite = { version = "0.15"}
hang = { version = "0.15"}
moq-mux = { version = "0.3"}
moq-msf = { version = "0.1"}
moq-native = { version = "0.13"}
moq-relay = { version = "0.10"}
mp4 = "0.14.0"
base64 = "0.22.1"
rustls = "0.23.36"
tracing = "0.1.44"
async-stream = "0.3.6"
url = "2.5.8"
libc = "0.2.180"
